# osuFM

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: s3upload.yml  s3upload.yml2
crawler/: CMakeLists.txt  beatmap.py  calc.py  citest.py  compile.sh  conf.json.example  convert.py  countries.json  crawl.py  crawlC.py  crawler.py  datemodified  diffGetter.py  diff_calc.py  keys.cfg.example  main.cpp  mods.py  oppai.c  requirements.txt  screenlog.0  updateDiffs.py
crawler_cpp/: oppai.c
crawler_exp/: CMakeLists.txt  compile.sh  hdf.py  main.cpp  static_test.py
crawler_old/: crawl.py  getcountries.py  keys.cfg.example  mods.py  requirements.txt  updateDiffs.py
old/crawler_cpp/: conf.json.example  main.cpp
old/crawler_exp/: compile.sh  main.cpp
old/crawler_old/: crawl.py  getcountries.py  keys.cfg.example  requirements.txt  updateDiffs.py
old/osuFM/: osufm.config.js  start.sh
osuFM/: app.js  osufm.config.js  package-lock.json  package.json  start.bat
osuFM/config/: config.json
osuFM/models/: beatmap.js  score.js
osuFM/routes/: index.js
osuFM/util/: helper.js
osuFM/views/: footer.pug  head.pug  index.pug  layout.pug
public/: .htaccess  index.html
react/my-app/: index.d.ts  package.json
site/: index.html
src/: App.tsx  index.tsx
src/components/: ApplyDialogue.tsx  DeleteDialogue.tsx  Footer.tsx  Header.tsx  MyTheme.tsx  ProfileName.tsx  Profiles.tsx  RenameDialogue.tsx  Scroll.tsx  Search.tsx  SkeletonTable.tsx  Sliders.tsx  Table.tsx  (+2 more)
uploader/: upload.sh
(+32 files in other folders)
